# omnisec

./: .dockerignore  BETA_REVALIDATION_REPORT.md  BETA_VALIDATION_REPORT.md  Cargo.toml  DEPLOYMENT_AUTOMATION_REPORT.md  DEPLOYMENT_CONTEXT_FIX_REPORT.md  DOCUMENTATION_AUDIT_REPORT.md  EBPF_RUNTIME_REPORT.md  ENFORCEMENT_VALIDATION_REPORT.md  GITHUB_DEPLOYMENT_REPORT.md  LOCAL_FIX_VALIDATION.md  PRODUCTION_READINESS_REPORT.md  README.md  SAFE_MODE_RUNTIME_REPORT.md  TELEMETRY_FIX_REPORT.md
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: main.rs
apps/dashboard/: Dockerfile
apps/dashboard/app/enforcement/: page.tsx
crates/chaos/: Dockerfile
crates/ebpf/: build.rs
crates/ebpf/src/: lib.rs
crates/enforcement/src/: lib.rs
crates/events/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/storage/migrations/: 006_state.sql  007_event_type_text.sql
crates/storage/src/: lib.rs
docs/: DEPLOYMENT_GUIDE.md  RUNBOOK.md
infra/docker/: docker-compose.design-partner.yml
postgres/: init.sql
scripts/: deploy-design-partner.sh  validate-environment.sh
services/daemon/: Cargo.toml  Dockerfile
services/daemon/src/: main.rs
services/doctor/src/: main.rs
services/policy-engine/: Dockerfile
services/proxy/: Dockerfile
