[package]
name = "omnisec-state"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true

omnisec-events.workspace = true
omnisec-identity.workspace = true
omnisec-monitoring.workspace = true
